# VulkanRenderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-cpp.yml
source/: CMakeLists.txt  graph.json  main.cpp
source/chapter1/: CMakeLists.txt  main.cpp
source/graphics/: command_buffer.cpp  frame_graph.cpp  frame_graph.hpp  gpu_device.cpp  gpu_device.hpp  gpu_profiler.hpp  gpu_resources.cpp  gpu_resources.hpp  raptor_imgui.cpp  render_resources_loader.cpp  render_scene.cpp  renderer.cpp  scene_graph.cpp  scene_graph.hpp
source/shaders/: culling.glsl  debug_rendering.h  lighting.h  main.frag  main.glsl  main.vert  mesh.h  meshlet.glsl  pbr.glsl  pbr_lighting.json  phong.frag  phong.vert  platform.h  skinning.glsl
